--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_monster_details_for_single_monster.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_monster_details_for_single_monster.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173009&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=s%2F9xGMsdnrB0qqMXQjSIx3hDfVOS5MSKbXHS%2BKWME2A%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173908&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2FpnemWWYvaqgEZN74C4kIfZAdVMp7emjE210vaNQdgA%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707173009&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=s%2F9xGMsdnrB0qqMXQjSIx3hDfVOS5MSKbXHS%2BKWME2A%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707173908&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2FpnemWWYvaqgEZN74C4kIfZAdVMp7emjE210vaNQdgA%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -50,11 +50,11 @@ http_interactions:
       X-Ratelimit-Limit:
       - '10000'
       X-Ratelimit-Remaining:
-      - '9998'
+      - '9999'
       Date:
-      - Mon, 05 Feb 2024 22:43:29 GMT
+      - Mon, 05 Feb 2024 22:58:28 GMT
       X-Ratelimit-Reset:
-      - '1707173011'
+      - '1707173910'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,19 +171,19 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 22:43:29 GMT
+  recorded_at: Mon, 05 Feb 2024 22:58:29 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_135100($index:
+      string: '{"query":"query GraphQL__Client__OperationDefinition_114980($index:
         String) {\n  monster(index: $index) {\n    index\n    name\n    size\n    armor_class
         {\n      value\n    }\n    speed {\n      walk\n      fly\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    damage_vulnerabilities\n    damage_resistances\n    damage_immunities\n    proficiency_bonus\n    proficiencies
         {\n      proficiency {\n        name\n      }\n      value\n    }\n    senses
         {\n      blindsight\n      darkvision\n      passive_perception\n    }\n    special_abilities
         {\n      name\n      desc\n    }\n    actions {\n      name\n      desc\n    }\n    legendary_actions
-        {\n      name\n      desc\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_135100","variables":{}}'
+        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_114980","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -201,9 +201,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173010&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=XdpTG0tclMkWNrcVLXYV2fYFN3blana%2FbU%2Bcws9FSys%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173909&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hUY9tue%2BPj9%2F61RVSXE2PJU9NIFBdT6b%2FkLAYEqmGnY%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707173010&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=XdpTG0tclMkWNrcVLXYV2fYFN3blana%2FbU%2Bcws9FSys%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707173909&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hUY9tue%2BPj9%2F61RVSXE2PJU9NIFBdT6b%2FkLAYEqmGnY%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -217,15 +217,15 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 22:43:30 GMT
+      - Mon, 05 Feb 2024 22:58:29 GMT
       X-Ratelimit-Reset:
-      - '1707173011'
+      - '1707173910'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '3225'
+      - '3251'
       Etag:
-      - W/"c99-Qg4OmRiRC1dU3JP77I0zeTL4Zbk"
+      - W/"cb3-2sJsP1rd+YP9HRsII/9rzjuiCCk"
       Via:
       - 1.1 vegur
     body:
@@ -265,8 +265,8 @@ http_interactions:
         dragon makes a tail attack."},{"name":"Wing Attack (Costs 2 Actions)","desc":"The
         dragon beats its wings. Each creature within 10 ft. of the dragon must succeed
         on a DC 22 Dexterity saving throw or take 15 (2d6 + 8) bludgeoning damage
-        and be knocked prone. The dragon can then fly up to half its flying speed."}]}}}
+        and be knocked prone. The dragon can then fly up to half its flying speed."}],"condition_immunities":[]}}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 22:43:30 GMT
+  recorded_at: Mon, 05 Feb 2024 22:58:29 GMT
 recorded_with: VCR 6.2.0
