--- a/spec/fixtures/vcr_cassettes/MonsterFacade/MonsterFacade_instance_methods/_single_monster_details_index_.yml
+++ b/spec/fixtures/vcr_cassettes/MonsterFacade/MonsterFacade_instance_methods/_single_monster_details_index_.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173006&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=1ONMSG%2FXVvYcHzknQaF4FCG99EQDhd1I6T0R0wS9t9g%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173906&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=uCLAnxUAbmiQnaVdl%2BcH9GA8vOPJoPw5DWxv8H2RIV8%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707173006&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=1ONMSG%2FXVvYcHzknQaF4FCG99EQDhd1I6T0R0wS9t9g%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707173906&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=uCLAnxUAbmiQnaVdl%2BcH9GA8vOPJoPw5DWxv8H2RIV8%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 22:43:26 GMT
+      - Mon, 05 Feb 2024 22:58:26 GMT
       X-Ratelimit-Reset:
-      - '1707173008'
+      - '1707173907'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,19 +171,19 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 22:43:26 GMT
+  recorded_at: Mon, 05 Feb 2024 22:58:26 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_52920($index:
+      string: '{"query":"query GraphQL__Client__OperationDefinition_52960($index:
         String) {\n  monster(index: $index) {\n    index\n    name\n    size\n    armor_class
         {\n      value\n    }\n    speed {\n      walk\n      fly\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    damage_vulnerabilities\n    damage_resistances\n    damage_immunities\n    proficiency_bonus\n    proficiencies
         {\n      proficiency {\n        name\n      }\n      value\n    }\n    senses
         {\n      blindsight\n      darkvision\n      passive_perception\n    }\n    special_abilities
         {\n      name\n      desc\n    }\n    actions {\n      name\n      desc\n    }\n    legendary_actions
-        {\n      name\n      desc\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_52920","variables":{}}'
+        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_52960","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -201,9 +201,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173006&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=1ONMSG%2FXVvYcHzknQaF4FCG99EQDhd1I6T0R0wS9t9g%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173907&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=cMQ7vvYCF%2B0T1aUkViaCRGIidRCkl7bHkQ5cGhvw8DQ%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707173006&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=1ONMSG%2FXVvYcHzknQaF4FCG99EQDhd1I6T0R0wS9t9g%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707173907&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=cMQ7vvYCF%2B0T1aUkViaCRGIidRCkl7bHkQ5cGhvw8DQ%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -217,15 +217,15 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 22:43:26 GMT
+      - Mon, 05 Feb 2024 22:58:27 GMT
       X-Ratelimit-Reset:
-      - '1707173008'
+      - '1707173908'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '3225'
+      - '3251'
       Etag:
-      - W/"c99-Qg4OmRiRC1dU3JP77I0zeTL4Zbk"
+      - W/"cb3-2sJsP1rd+YP9HRsII/9rzjuiCCk"
       Via:
       - 1.1 vegur
     body:
@@ -265,8 +265,8 @@ http_interactions:
         dragon makes a tail attack."},{"name":"Wing Attack (Costs 2 Actions)","desc":"The
         dragon beats its wings. Each creature within 10 ft. of the dragon must succeed
         on a DC 22 Dexterity saving throw or take 15 (2d6 + 8) bludgeoning damage
-        and be knocked prone. The dragon can then fly up to half its flying speed."}]}}}
+        and be knocked prone. The dragon can then fly up to half its flying speed."}],"condition_immunities":[]}}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 22:43:27 GMT
+  recorded_at: Mon, 05 Feb 2024 22:58:27 GMT
 recorded_with: VCR 6.2.0
