--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_monster_details_for_single_monster.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_monster_details_for_single_monster.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707182820&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=EmX3VqBbJMPovbeoXQqYugttf3SH61A0AHp30WClel4%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707183781&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Y1hQuwuxI4ww%2FYsZIxapBPICIGwtG8NLKW0mBfxLQR0%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707182820&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=EmX3VqBbJMPovbeoXQqYugttf3SH61A0AHp30WClel4%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707183781&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Y1hQuwuxI4ww%2FYsZIxapBPICIGwtG8NLKW0mBfxLQR0%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 01:27:00 GMT
+      - Tue, 06 Feb 2024 01:43:01 GMT
       X-Ratelimit-Reset:
-      - '1707182822'
+      - '1707183782'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,19 +171,19 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 01:27:00 GMT
+  recorded_at: Tue, 06 Feb 2024 01:43:01 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_135200($index:
+      string: '{"query":"query GraphQL__Client__OperationDefinition_135280($index:
         String) {\n  monster(index: $index) {\n    index\n    name\n    size\n    armor_class
         {\n      value\n    }\n    speed {\n      walk\n      fly\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    damage_vulnerabilities\n    damage_resistances\n    damage_immunities\n    proficiency_bonus\n    proficiencies
         {\n      proficiency {\n        name\n      }\n      value\n    }\n    senses
         {\n      blindsight\n      darkvision\n      passive_perception\n    }\n    special_abilities
         {\n      name\n      desc\n    }\n    actions {\n      name\n      desc\n    }\n    legendary_actions
-        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_135200","variables":{}}'
+        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_135280","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -201,9 +201,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707182820&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=EmX3VqBbJMPovbeoXQqYugttf3SH61A0AHp30WClel4%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707183781&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Y1hQuwuxI4ww%2FYsZIxapBPICIGwtG8NLKW0mBfxLQR0%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707182820&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=EmX3VqBbJMPovbeoXQqYugttf3SH61A0AHp30WClel4%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707183781&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Y1hQuwuxI4ww%2FYsZIxapBPICIGwtG8NLKW0mBfxLQR0%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -217,9 +217,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 01:27:00 GMT
+      - Tue, 06 Feb 2024 01:43:01 GMT
       X-Ratelimit-Reset:
-      - '1707182822'
+      - '1707183783'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -268,5 +268,5 @@ http_interactions:
         and be knocked prone. The dragon can then fly up to half its flying speed."}],"condition_immunities":[]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 01:27:00 GMT
+  recorded_at: Tue, 06 Feb 2024 01:43:01 GMT
 recorded_with: VCR 6.2.0
