--- a/spec/fixtures/vcr_cassettes/Queries_Monsters/monsters/returns_all_monsters.yml
+++ b/spec/fixtures/vcr_cassettes/Queries_Monsters/monsters/returns_all_monsters.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707182818&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=esVUATKSMBqOlWMo9r76UxgEA0AcjhGugK%2BOw0dKumQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707183779&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=I7oPEeWfjoiu13TGrB33P5R7AFJFFFnSlTcEPhqtxng%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707182818&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=esVUATKSMBqOlWMo9r76UxgEA0AcjhGugK%2BOw0dKumQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707183779&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=I7oPEeWfjoiu13TGrB33P5R7AFJFFFnSlTcEPhqtxng%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 01:26:58 GMT
+      - Tue, 06 Feb 2024 01:42:59 GMT
       X-Ratelimit-Reset:
-      - '1707182820'
+      - '1707183780'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,14 +171,14 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 01:26:59 GMT
+  recorded_at: Tue, 06 Feb 2024 01:42:59 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_95380 {\n  monsters
-        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_95380","variables":{}}'
+      string: '{"query":"query GraphQL__Client__OperationDefinition_95460 {\n  monsters
+        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_95460","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707182819&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=cKEqpKLY279xOG%2Bi%2Fiztmfi9al%2BX7gl10qVcBTYMq%2BE%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707183780&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Uh2f5ZjJBJYtB%2FdKN0HjQzAaFb9x5pxz8BpNrpXYo3A%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707182819&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=cKEqpKLY279xOG%2Bi%2Fiztmfi9al%2BX7gl10qVcBTYMq%2BE%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707183780&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Uh2f5ZjJBJYtB%2FdKN0HjQzAaFb9x5pxz8BpNrpXYo3A%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 01:26:59 GMT
+      - Tue, 06 Feb 2024 01:43:00 GMT
       X-Ratelimit-Reset:
-      - '1707182821'
+      - '1707183781'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -311,5 +311,5 @@ http_interactions:
         evil"}]}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 01:26:59 GMT
+  recorded_at: Tue, 06 Feb 2024 01:43:00 GMT
 recorded_with: VCR 6.2.0
